--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-htmlmin": "0.1.3",
+    "grunt-contrib-compress": "0.5.3",
     "rimraf": "2.1"
   }
 }
